<resources>
    <!-- Titles   -->
    <string name="app_name" translatable="false">DWeather</string>
    <string name="title_activity_settings">Settings DWeather</string>

    <!-- legend   -->
    <string name="textView">Temperature</string>
    <string name="weatherIcon">Weather icon</string>
    <string name="atmPressureCheckBox">atmospheric pressure</string>
    <string name="windCheckBox">wind speed</string>

    <!--   Settings-->

    <!-- Preference Titles -->
    <string name="color_scheme_title">Use black color scheme</string>
    <string name="display_setting">Location setting</string>
    <string name="color_sсheme_header">Color scheme</string>
    <string name="info_to_display">Information to display</string>

    <!-- Messages Preferences -->
    <string name="user_location_title">Your DLocation</string>
    <string name="menu_button_about">About</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_button_quit">Quit</string>
    <string name="default_user_location">Moscow</string>
    <string name="menu_button_select_city">Select DLocation</string>
    <string name="hint_select_location">select DLocation please</string>
    <string name="location_confirm">Confirm</string>

    <string name="temp_temperature">Updating…</string>
    <string name="celsius" translatable="false">℃</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_connection">"No connection to "</string>
    <string name="no_country">country not defined</string>
    <string name="no_city">City not defined</string>
    <string name="temperature">"Temperature: "</string>
    <string name="max_temp">"Temperature Max: "</string>
    <string name="speed_weather">"wind speed: "</string>
    <string name="temp_min">"Temperature Min: "</string>
    <string name="feels_like">"Feels like: "</string>
    <string name="pressure">"Atm. pressure: "</string>
    <string name="wind_direction">"Direction of the wind: "</string>
    <string name="visibility">Visibility: </string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="location_not_found">Location not found</string>
    <string name="wind">speed of wind</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>
