<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/button_menu_settings"
        android:orderInCategory="1"
        android:title="@string/menu_button_settings" />

    <item
        android:id="@+id/button_menu_select_city"
        android:orderInCategory="2"
        android:title="@string/menu_button_select_city" />

    <item
        android:id="@+id/button_menu_about"
        android:orderInCategory="3"
        android:title="@string/menu_button_about" />

    <item
        android:id="@+id/clear_search_history"
        android:orderInCategory="4"
        android:title="@string/clear_history" />

    <item
        android:id="@+id/button_menu_quit"
        android:orderInCategory="5"
        android:title="@string/menu_button_quit" />

</menu>