<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/display_setting">

        <EditTextPreference
            app:key="location"
            app:title="@string/user_location_title"
            android:defaultValue="@string/default_user_location"
            app:useSimpleSummaryProvider="true" />

<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/enterUserLocation"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/please_enter_your_location"-->

<!--            android:inputType="textAutoComplete"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/info_to_display">
        <CheckBoxPreference
            android:key="setting_check_wind"
            android:title="@string/windCheckBox"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="setting_check_atmPressure"
            android:title="@string/atmPressureCheckBox"
            android:defaultValue="true"/>
    </PreferenceCategory>


</PreferenceScreen>
